Fixed bug #9079: The alignment of the radio buttons has been fixed.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/branches/IP_TYPO3_4-4@39855 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/css/example.css
+++ b/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/css/example.css
@@ -130,6 +130,7 @@ form .csc-mailform-radio fieldset input { float: none; }
 form .csc-mailform-radio fieldset label { text-align: left; float: none; width: auto; margin: 0; }
 form .csc-mailform-field input.mf-check, form .csc-mailform-field input.csc-mailform-radio { width: auto; }
 form .csc-mailform-field input.csc-mailform-radio { margin-right: 0.5em; }
+form .csc-mailform-field .csc-mailform-radio label { float: none; margin-right: 0; } 
 
 /* fe login*/
 
